# nfl-data-api

./: .gitignore  Dockerfile  README.md  fly.toml  pyproject.toml
.github/workflows/: refresh.yml
api/: deps.py  main.py
api/models/: responses.py
api/routers/: admin.py  advanced.py  games.py  meta.py  players.py  plays.py  reference.py  stats.py
data/: last_run_counts.json
data/bronze/historical_gamelogs/: 1970.parquet  1971.parquet  1972.parquet  1973.parquet  1974.parquet  1975.parquet  1976.parquet  1977.parquet  1978.parquet  1979.parquet  1980.parquet  1981.parquet  1982.parquet  1983.parquet  1984.parquet  1985.parquet  1986.parquet  1987.parquet  1988.parquet  1989.parquet  1990.parquet  1991.parquet  1992.parquet  1993.parquet  1994.parquet  1995.parquet  1996.parquet  1997.parquet  1998.parquet  1999.parquet  2001.parquet  2002.parquet  2003.parquet  2004.parquet  2005.parquet  2006.parquet  2007.parquet  2008.parquet  2009.parquet  2010.parquet  (+12 more)
data/bronze/historical_scoring/: 1970.parquet  1971.parquet  1972.parquet  1973.parquet  1974.parquet  1975.parquet  1976.parquet  1977.parquet  1978.parquet  1979.parquet  1980.parquet  1981.parquet  1982.parquet  1983.parquet  1984.parquet  1985.parquet  1986.parquet  1987.parquet  1988.parquet  1989.parquet  (+8 more)
pipeline/: cli.py  config.py
pipeline/bronze/: downloader.py  local_sources.py
pipeline/gold/: llm_reviewer.py  loader.py  name_resolver.py  schema.py
pipeline/mappings/: team_abbr.json
pipeline/silver/: cleaners.py  name_normalizer.py
tests/: test_config.py  test_name_normalizer.py
