[project]
name = "nfl-data-pipeline"
version = "0.1.0"
description = "Ingest and normalize public NFL data from nflverse into DuckDB"
requires-python = ">=3.12"
dependencies = [
    "polars>=1.0",
    "duckdb>=1.1",
    "httpx>=0.27",
    "typer>=0.12",
    "rich>=13",
    "pyarrow>=17",
    "numpy>=2.4.6",
    "rapidfuzz>=3.14.5",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "slowapi>=0.1.9",
    "resend>=2.0",
]

[project.scripts]
nfl = "pipeline.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pipeline", "api"]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
]
